--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Accord" version="3.8.0" targetFramework="net472" />
+  <package id="Accord.Genetic" version="3.8.0" targetFramework="net472" />
+  <package id="Accord.MachineLearning" version="3.8.0" targetFramework="net472" />
+  <package id="Accord.MachineLearning.GPL" version="3.8.0" targetFramework="net472" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net472" />
+  <package id="Accord.Neuro" version="3.8.0" targetFramework="net472" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net472" />
+  <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net472" />
+  <package id="MathNet.Filtering" version="0.6.0" targetFramework="net472" />
+  <package id="MathNet.Numerics" version="4.9.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net472" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net472" />
   <package id="Telegram.Bot" version="15.1.0" targetFramework="net472" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net472" />
 </packages>
